--- a/src/lang/en/contact.yaml
+++ b/src/lang/en/contact.yaml
@@ -1,23 +1,23 @@
 header:
-  title: Kontaktiere uns
-  subtitle: Wir vermieten unsere Chalet-Wohnung gerne an euch
+  title: Contact us
+  subtitle: We are happy to let our chalet apartment to you
 form:
   name:
     label: Name
-    placeholder: Dein Name
+    placeholder: Your name
   email: 
     label: Email
-    placeholder: Email Addresse
+    placeholder: Email address
   subject:
-    label: Betreff
-    placeholder: Worum geht's?
+    label: Subject
+    placeholder: What's up?
   message:
-    label: Nachricht
-    placeholder: Grüezi!
-  submit: Abschicken
+    label: Message
+    placeholder: Hi!
+  submit: Submit
 info:
-  title: Kontakt
-  owner: Inhaber
-  address: Adresse
+  title: Contact
+  owner: Owner
+  address: Address
   phone: Phone
-  email: Email-Adresse
+  email: Email address
