Updated key information

--- a/src/lang/de/info.yaml
+++ b/src/lang/de/info.yaml
@@ -72,7 +72,8 @@ keys:
   text: >
     Den Schlüssel findet ihr im Schlüsselsafe neben dem Eingang. Es ist der zweite von der Marke EMIUP.
     Der Schlüssel schließt die Haus- und Wohnungstür, das Tiefgaragentor sowie den Skiraum.
-    Unser Tip ist, dass ihr den Schlüssel immer im Safe lasst, wenn ihr nicht in der Wohnung seid.
+    Wenn ihr abreist, lasst den Schlüssel bitte unbedingt im Safe. 
+    Das empfehlen wir auch, wenn ihr während eures Aufenthalts die Wohnung verlasst (gerade für Gruppen).
 ski:
   title: Skiraum
   text: >
