--- a/src/lang/en/info.yaml
+++ b/src/lang/en/info.yaml
@@ -68,11 +68,12 @@ parking:
     If you arrived with more than one car, you can also use the free parking lot
     opposite the apartment (2. on the map).
 keys:
-  title: keys
+  title: Keys
   text: >
     You can find the key in the key safe next to the entrance. It is the second one from the EMIUP brand.
     The key closes the front door of the house and apartment, the underground garage door and the ski room.
-    Our advice is to always leave the key in the safe when you are not in the apartment.
+    When you leave, please leave the key in the safe. 
+    This is also recommended if you leave the apartment during your stay (especially for groups).
 ski:
   title: Ski Room
   text: >
