Updated key information

--- a/src/lang/de/info.yaml
+++ b/src/lang/de/info.yaml
@@ -69,8 +69,10 @@ parking:
     gegenüber der Wohnung nutzen (2. auf der Karte).
 keys:
   title: Schlüssel
-  text: >
-    Den Schlüssel findet ihr im Schlüsselsafe neben dem Eingang. Es ist der zweite von der Marke EMIUP.
+  text1: >
+    Den Schlüssel findet ihr im Schlüsselsafe neben dem Eingang (Marke EMIUP). 
+    Den Code erhaltet ihr nach eurer Buchung über die AirBnB App. 
+  text2: >
     Der Schlüssel schließt die Haus- und Wohnungstür, das Tiefgaragentor sowie den Skiraum.
     Wenn ihr abreist, lasst den Schlüssel bitte unbedingt im Safe. 
     Das empfehlen wir auch, wenn ihr während eures Aufenthalts die Wohnung verlasst (gerade für Gruppen).
