--- a/src/lang/en/info.yaml
+++ b/src/lang/en/info.yaml
@@ -69,11 +69,13 @@ parking:
     opposite the apartment (2. on the map).
 keys:
   title: Keys
-  text: >
-    You can find the key in the key safe next to the entrance. It is the second one from the EMIUP brand.
+  text1: >
+    You can find the key in the key safe next to the entrance (EMIUP brand). 
+    You will receive the code after your booking via the AirBnB App. 
+  text2: >
     The key closes the front door of the house and apartment, the underground garage door and the ski room.
     When you leave, please leave the key in the safe. 
-    This is also recommended if you leave the apartment during your stay (especially for groups).
+    We also recommend this if you leave the apartment during your stay (especially for groups).
 ski:
   title: Ski Room
   text: >
