Added guest card and gstaad card info

--- a/src/lang/de/info.yaml
+++ b/src/lang/de/info.yaml
@@ -31,6 +31,20 @@ tv:
     Für eine einfacherer Steuerung können wir auch empfehlen, die LG TV Plus App als Fernbedienung 
     zu verwenden. Der TV hat keinen Kabelanschluss — deswegen sagt er auch, er sei "nicht programmiert". 
     Bevor ihr abreist, denkt daran, euch aus euren Accounts abzumelden.
+guest_card:
+  title: Gästekarte
+  text1: >
+    Bei eurem Besuch steht euch die Gstaad Gästekarte zur Verfügung. 
+    Sie bietet eine schöne Möglichkeit, die Angebote der Region vergünstigt zu nutzen.
+    Alle Angebote findet ihr unter <a href="https://www.gstaad.ch/gaestekarte" target="_blank">gstaad.ch/gaestekarte</a>.
+  text2: >
+    Das beste ist, dass ihr von Mai bis Ende Oktober die Gstaad Card für CHF 19.- (Kinder CHF 9.-) kaufen könnt.
+    Dort sind Bergbahnen, verschiedene öffentliche Verkehrsmittel sowie diverse Angebote zur attraktiven 
+    Freizeitgestaltung inklusive bzw. vergünstigt — ein unschlagbarer Preis. Alles dazu unter 
+    <a href="https://www.gstaad.ch/aktuell/angebote/gstaad-card" target="_blank">gstaad.ch/aktuell/angebote/gstaad-card</a>.
+  text3: >
+    Die Gästekarte liegt in der Wohnung aus. Da sie nicht pro Gast sondern pro Ferienwohnung ausgegeben wird, 
+    bitten wir euch, sie bei Abreise auch wieder in der Wohnung zu belassen. Danke!
 additional_equipment:
   title: Gläser, Fondue & Raclette
   text: >
