Polished info page

--- a/src/lang/en/info.yaml
+++ b/src/lang/en/info.yaml
@@ -51,7 +51,7 @@ additional_equipment:
     Besides the kitchen you will find more glasses in the chest of drawers in the kitchen. 
     There you can find the caquelon for fondue and the raclette machine.
 contact:
-  title: contact
+  title: Contact
   text: >
     If you have any questions or problems we are of course here for you. Contact us either
     via the AirBnB App or use the contact option <a href="contact.html"> on this page</a>.
@@ -96,11 +96,11 @@ ski:
     Please leave your ski and snowboard equipment in the ski room. Not with your ski boots through the staircase
     go! Right of the entrance you'll find the stairs leading to the ski room.
 dishes:
-  title: Sink
+  title: Dishes
   text: >
     We are happy if you wash your dishes directly, so that no dirt can settle.
 power:
-  title: plug adapters & cables
+  title: Plug adapters & cables
   text: >
     Plug adapters, multiple plugs and extension cables can be found in the chest of drawers in the living room. 
     In the second drawer from the right you will find what you are looking for.
