--- a/src/lang/de/info.yaml
+++ b/src/lang/de/info.yaml
@@ -25,7 +25,7 @@ tv:
   text1: >
     Mit dem Smart-TV könnt ihr einfach eure Lieblingssendungen auf Netflix oder Amazon Prime Video 
     weiterschauen oder über die Apps oder den Browser beliebige andere Inhalte konsumieren. 
-    Er unter unterstützt auch AirPlay und Google Cast — wenn ihr im WiFi seid könnt ihr einfach Inhalte
+    Er unterstützt auch AirPlay und Google Cast — wenn ihr im WiFi seid könnt ihr einfach Inhalte
     an den Fernseher schicken.
   text2: >
     Für eine einfacherer Steuerung können wir auch empfehlen, die LG TV Plus App als Fernbedienung 
