--- a/src/lang/de/info.yaml
+++ b/src/lang/de/info.yaml
@@ -23,7 +23,7 @@ tv:
   title: Fernseher
   text1: >
     Mit dem Smart-TV könnt ihr eure Lieblingssendungen auf Netflix oder Amazon Prime Video 
-    schauen und über die TV-Apps auf den Browser oder beliebige andere Inhalte zugreifen. 
+    schauen und über die TV-Apps oder den Browser auf beliebige andere Inhalte zugreifen. 
     Er unterstützt auch AirPlay und Google Cast — wenn ihr im WiFi seid, könnt ihr Inhalte
     einfach an den Fernseher schicken.
   text2: >
