--- a/src/lang/en/recommendations.yaml
+++ b/src/lang/en/recommendations.yaml
@@ -1,3 +1,5 @@
+meta:
+  description: Our local recommendations for Schönried and the region of Saanen
 header:
   title: Local recommendations
   subtitle: Where we like eat and shop
