Added description meta tag

--- a/src/lang/de/contact.yaml
+++ b/src/lang/de/contact.yaml
@@ -1,3 +1,7 @@
+meta:
+  description: >
+    Kontaktiere uns gerne, wenn du unser Wohnung in Schönried mieten willst oder 
+    Fragen zu Region hast.
 header:
   title: Kontaktiere uns
   subtitle: Wir vermieten unsere Chalet-Wohnung gerne an euch
