--- a/src/lang/de/index.yaml
+++ b/src/lang/de/index.yaml
@@ -1,3 +1,7 @@
+meta:
+  description: >
+    Hier findest du alle Informationen rund um ein Apartment in Schönried, Schweiz, welches
+    du über AirBnB mieten kannst sowie Informationen und Empfehlungen in der Region
 header:
   title: Willkommen in Schönried
   subtitle: Chalet Gassegüetli
