--- a/src/lang/de/info.yaml
+++ b/src/lang/de/info.yaml
@@ -1,3 +1,7 @@
+meta:
+  description: >
+    Alle Informationen rund um das über AirBnB vermiete Apartment in Schönried 
+    im Berner Oberland der Schweiz.
 header:
   title: Alle Infos zur Wohnung
   subtitle: Was ihr vor Ort wissen müsst
