--- a/src/lang/en/contact.yaml
+++ b/src/lang/en/contact.yaml
@@ -1,3 +1,7 @@
+meta:
+  description: >
+    Feel free to contact us if you want to rent our apartment in Schönried or if you have 
+    have questions about the region.
 header:
   title: Contact us
   subtitle: We are happy to let our chalet apartment to you
