--- a/src/lang/en/info.yaml
+++ b/src/lang/en/info.yaml
@@ -1,3 +1,7 @@
+meta:
+  description: >
+    All information about the flat in Schönried in the Bernese Oberland in Switzerland, 
+    which is rented out via AirBnB
 header:
   title: All information about the flat
   subtitle: What you need to know on site
