--- a/src/lang/en/index.yaml
+++ b/src/lang/en/index.yaml
@@ -1,3 +1,7 @@
+meta:
+  description: >
+    Here you can find all the information about a flat in Schönried, Switzerland, which you can
+    you can rent through AirBnB as well as information and recommendations in the region.
 header:
   title: Welcome in Schönried
   subtitle: Chalet Gassegüetli
