--- a/src/lang/de/recommendations.yaml
+++ b/src/lang/de/recommendations.yaml
@@ -3,3 +3,101 @@ meta:
 header:
   title: Lokale Empfehlungen
   subtitle: Wo wir gerne essen und einkaufen
+shopping:
+  title: Einkaufen
+  dairy:
+    title: Molkerei
+    text1: >-
+      Die lokale Molkerei alleine ist ein Grund nach Schönried zu kommen. Jeden
+      Morgen bringen die Bauern die frische Milch, welche zu einfach
+      vorzüglichen Produkten verarbeitet werden. Unsere Favoriten:
+    favorite1: "Der <a href=\"https://www.bergmolkerei.ch/product/joghurt-fruchtig-fein/\">Schoki-Joguhrt</a> —\_einfach unglaublich lecker und findet man in dieser Form fast nirgends"
+    favorite2: >-
+      Das <a
+      href="https://www.bergmolkerei.ch/product/fondue-hausmischung-fuer-kalte-tage-2/">Käse-Fondue</a>
+      — fertig vorbereitet kann es einfach mit dem Caquelon in der Wohnung
+      zubreitet werden
+    favorite3: >-
+      Den kleinen Weichkäse <a
+      href="https://www.bergmolkerei.ch/product/schoenriederli-die-mischung-machts/">Schönriederli</a>
+      — wunderbar lecker mit Ziegen- und Kuhmilch
+    favorite4: "Hervorragender <a href=\"https://www.bergmolkerei.ch/product/raclettkaese-cremig-und-aromatisch/\">Raclettekäse</a> —\_für eine weitere Schweizer Spezialität"
+    text2: >-
+      Auf der Website findet ihr weitere <a
+      href="https://www.bergmolkerei.ch/shop/"> Inspirationen</a> und die <a
+      href="https://www.bergmolkerei.ch/kontakt/">Öffnungszeiten</a>.
+  butcher:
+    title: Buure Metzg
+    text1: >-
+      Auch wenn wir nicht oft Fleisch essen, so können wir sagen, dass auch der
+      lokale Metzger Angebote von toller Qualität hat. Und nicht nur wegen
+      Fleisch, sondern auch wegen frischem Gemüse gehen wir gerne dort hin.
+      Unsere Favoriten:
+    favorite1: "Der gemischte Salat —\_schon fertig gerupft und gewaschen"
+    favorite2: "Die Salat-Soße —\_sie hat es in sich, ist aber auch wirklich lecker"
+    text2: >-
+      Die Öffnungszeiten findet ihr auf <a
+      href="https://goo.gl/maps/KdxRwW4iuDNh7WEj7">Google Maps</a>.
+  bakery:
+    title: Chnusper Becke
+    text1: >-
+      Der Bäcker in Schönried bietet nicht nur leckere Backwaren sondern ist
+      gleichzeitig auch der lokale Supermarkt. Günstiger wird's beim Coop oder
+      Migros in Gstaad, aber für den spontanen Einkauf allemal zu Empfehlen.
+      Unsere Favoriten:
+    favorite1: Die Nusskrapfen — der perfekte Snack zum Kaffee am Nachmittag
+    favorite2: >-
+      Die Pizza aus der Gefriertruhe — wirklich lecker, wenn man mal nicht
+      selbst kochen will
+    text2: >-
+      Wenn ihr nach Brötchen sucht, empfehlen wir euch tatsächlich die Molkerei.
+      Die sind etwas größer und wir mögen sie lieber.
+    text3: >-
+      Die Öffnungszeiten findet man leider nicht online, aber generell haben die
+      Läden über Mittag und am Sonntag geschlossen.
+  supermarket:
+    title: Coop & Migros in Gstaad
+    text1: >-
+      Für den allgemeinen Bedarf empfehlen wir einen Einkaufsbummel nach Gstaad.
+      Dort finden sich mit Coop und Migros Filialen der beiden großen Schweizer
+      Supermarkt-Ketten, in welchen sich vergleichsweise günstig einkaufen
+      lässt. Zudem lässt es sich auch immer nett durch die Gstaadter
+      Fußgängerzone mit weiteren Einkaufsmöglichkeiten schlendern.
+    text2: >-
+      Am entspanntesten kommt man in wenigen Minuten mit dem Zug nach Gstaad.
+      Dabei kann man nicht nur die Schweizer Eisenbahnkultur sondern auch
+      atemberaubende Ausblicke genießen. Sehr empfehlenswert. Ansonsten braucht
+      man auch nicht viel mehr als 10 Minuten mit dem Auto nach Gstaad. Und wenn
+      das Wetter einlädt, kann man auch sehr gut eine Strecke zu Fuß laufen.
+restaurants:
+  title: Ausgehen
+  kernen:
+    title: Hotel Kernen
+    text1: >-
+      Wir gehen gerne zum Abendessen ins Hotel Kernen. Es gibt eine
+      abwechslungsreiche Karte mit Schweizer Spezialitäten, vegetarischen
+      Gerichten und verführerischen Nachspeisen. Besonders schätzen wir das
+      urige Ambiente, vor allem im Sommer auf der Terasse mit Ausblick auf das
+      Horneggli und die Wispile sowie die freundliche Bedienung. Unsere
+      Favoriten:
+    favorite1: Edwin’s Hausburger — ein Genuss mit Raclettekäse
+    favorite2: Das Älpler Rösti — die Schweizer Spezialität
+    text2: >-
+      Die ganze Karte findet ihr auf der <a
+      href="https://www.hotel-kernen.ch/de/gaschtronomie/">hier</a>.
+  baergsunne:
+    title: Cafe Bärgsunne
+    text1: >-
+      Für einen Kaffe und ein Stück Kuchen am Nachmittag gehen wir sehr gerne in
+      das Cafe Bärgsunne. Man kann wunderbar draußen in der Sonne sitzen und die
+      Gastfreundschaft genießen.
+    text2: >-
+      Alle Infos zur Bärgsunne findet ihr unter <a
+      href="https://www.baergsunne-schoenried.ch">baergsunne-schoenried.ch</a>.
+  corrado:
+    title: Pizzaria Da Corrado
+    text1: >-
+      Gerade um die Ecke findet ihr die Pizzeria Da Corrado. Dort könnt ihr
+      nicht nur gemütlich vor Ort speisen, sondern euch auch schnell mal eine
+      Pizza für zu Hause abholen. Die Speisekarte findet ihr auf der <a
+      href="https://dacorrado.ch">Website</a>.
