--- a/src/lang/de/info.yaml
+++ b/src/lang/de/info.yaml
@@ -143,7 +143,7 @@ laundry:
   text2: >
     Die Waschküche findet ihr im Keller. Am Ende vom Treppenhaus links durch die Tür und gleich wieder links.
     Bitte beachtet die ausgehängten Anweisungen, hinterlasst die Waschküche sauber und tragt euch in die
-    ausliegende Liste ein (Wohnung Nr. 7). Zur Unterstützung, hier ein <a href="/images/waschen.mp4">Bedienungs-Video</a>.
+    ausliegende Liste ein (Wohnung Nr. 7). Zur Unterstützung, hier ein <a href="/images/info/waschen.mp4">Bedienungs-Video</a>.
 wifi:
   title: WiFi
   text: >
