--- a/src/lang/en/info.yaml
+++ b/src/lang/en/info.yaml
@@ -143,7 +143,7 @@ laundry:
   text2: >
     The laundry room is in the basement. At the end of the staircase turn left through the door and immediately left again.
     Please follow the instructions on the notice board, leave the laundry room clean and sign up for the
-    list on display (flat no. 7). To operate, here is a <a href="/images/washing.mp4">small video</a>.
+    list on display (flat no. 7). To operate, here is a <a href="/images/info/washing.mp4">small video</a>.
 wifi:
   title: WiFi
   text: >
