Added individual title for each page

--- a/src/lang/de/contact.yaml
+++ b/src/lang/de/contact.yaml
@@ -1,6 +1,7 @@
 meta:
+  title: Kontakt
   description: >
-    Kontaktiere uns gerne, wenn du unser Wohnung in Schönried mieten willst oder 
+    Kontaktiere uns, wenn du unser Wohnung in Schönried mieten willst oder 
     Fragen zu Region hast.
 header:
   title: Kontaktiere uns
