--- a/src/lang/de/index.yaml
+++ b/src/lang/de/index.yaml
@@ -1,8 +1,9 @@
 meta:
+  title: Home
   description: >
-    Hier findest du alle Informationen rund um ein Apartment in Schönried,
-    Schweiz, welches du über AirBnB mieten kannst sowie Informationen und
-    Empfehlungen in der Region
+    Das Apartment im Berner Oberland mit traumhaftem Ausblick auf die Schweizer Alpen
+    bietet Platz für die ganze Familie und den perfekten Ausgangspunkt für
+    Aktivitäten in den Bergen, inklusive Skilift im Ort.
 header:
   title: Willkommen in Schönried
   subtitle: Chalet Gassegüetli
