--- a/src/lang/de/info.yaml
+++ b/src/lang/de/info.yaml
@@ -1,7 +1,7 @@
 meta:
+  title: Vor Ort
   description: >
-    Alle Informationen rund um das über AirBnB vermiete Apartment in Schönried 
-    im Berner Oberland der Schweiz.
+    Alles was ihr wissen müsst, wenn ihr in unserer Wohnung im Berner Oberland nächtigt. 
 header:
   title: Alle Infos zur Wohnung
   subtitle: Was ihr vor Ort wissen müsst
