--- a/src/lang/de/recommendations.yaml
+++ b/src/lang/de/recommendations.yaml
@@ -1,5 +1,6 @@
 meta:
-  description: Unsere lokalen Empfehlungen für Schönried und die Region Saanen
+  title: Lokale Empfehlungen
+  description: Unsere lokalen Empfehlungen für Schönried und die Region Saanen.
 header:
   title: Lokale Empfehlungen
   subtitle: Wo wir gerne essen und einkaufen
