--- a/src/lang/en/contact.yaml
+++ b/src/lang/en/contact.yaml
@@ -1,6 +1,7 @@
 meta:
+  title: Contact
   description: >
-    Feel free to contact us if you want to rent our apartment in Schönried or if you have 
+    Contact us if you want to rent our apartment in Schönried or if you have 
     have questions about the region.
 header:
   title: Contact us
