--- a/src/lang/en/index.yaml
+++ b/src/lang/en/index.yaml
@@ -1,8 +1,9 @@
 meta:
+  title: Home
   description: >
-    Here you can find all the information about a flat in Schönried,
-    Switzerland, which you can you can rent through AirBnB as well as
-    information and recommendations in the region.
+    The flat in the Bernese Oberland with a fantastic view of the Swiss Alps
+    offers space for the whole family and the perfect starting point for mountain activities, 
+    including a ski lift in the village.
 header:
   title: Welcome in Schönried
   subtitle: Chalet Gassegüetli
