--- a/src/lang/en/info.yaml
+++ b/src/lang/en/info.yaml
@@ -1,7 +1,7 @@
 meta:
+  title: On site
   description: >
-    All information about the flat in Schönried in the Bernese Oberland in Switzerland, 
-    which is rented out via AirBnB
+    Everything you need to know when you stay in our flat in the Bernese Oberland. 
 header:
   title: All information about the flat
   subtitle: What you need to know on site
