--- a/src/lang/en/recommendations.yaml
+++ b/src/lang/en/recommendations.yaml
@@ -1,5 +1,6 @@
 meta:
-  description: Our local recommendations for Schönried and the region of Saanen
+  title: Local recommendations
+  description: Our local recommendations for Schönried and the region of Saanen.
 header:
   title: Local recommendations
   subtitle: Where we like eat and shop
