Adapted paragliding page to latest framework

--- a/src/lang/de/paragliding.yaml
+++ b/src/lang/de/paragliding.yaml
@@ -1,3 +1,6 @@
+meta:
+  title: Paragliding
+  description: Unsere Tips und Infos zum Fliegen im Berner Oberland der Schweiz.
 header:
   title: Paragliding
   subtitle: Die Schweiz aus der Luft erleben
