--- a/src/lang/en/paragliding.yaml
+++ b/src/lang/en/paragliding.yaml
@@ -1,3 +1,6 @@
+meta:
+  title: Paragliding
+  description: Our tips and information on flying in the Bernese Oberland in Switzerland.
 header:
   title: Paragliding
   subtitle: Experience Switzerland from the air
